feat(api): created api module for client-server communication
- configuration classes moved to api module
- defined application protocol
- added client-server functionality